[package]
name = "mlc"
version = "0.16.2"
authors = ["Armin Becher <becherarmin@gmail.com>"]
edition = "2018"
description = "The markup link checker (mlc) checks for broken links in markup files."
categories = ["command-line-utilities", "development-tools::testing", "text-processing"]
keywords = ["link-checker", "broken", "markup", "html", "markdown"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/becheran/mlc"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "becheran/mlc" }
is-it-maintained-issue-resolution = { repository = "becheran/mlc" }

[dependencies]
clap = { version = "4.0.26", features = ["cargo"] }
const_format = "0.2"
git-version = "0.3"
log = "0.4.17"
simplelog = "0.12"
walkdir = "2.3.2"
regex = "1"
lazy_static = "1.4.0"
url = "2.2.2"
colored = "2"
async-std = "1.12.0"
reqwest = {version="0.11.13", features = ["native-tls-vendored", "brotli", "gzip", "deflate"] }
tokio = {version="1.21.2", features = ["rt-multi-thread", "macros", "time"] }
futures = "0.3"
wildmatch = "2.1.1"
proc-macro2 = "1.0.66" # HACK Temporary fix; remove and see if `cargo clippy --release -- --deny clippy::pedantic` is still working
pulldown-cmark = "0.9.2"
toml = "0.7.3"
serde = { version = "1.0.147", features = ["derive"] }
url-escape = "0.1.1"
value-bag = "1.0.0" # HACK Temporary fix; remove and see if `cargo clippy --release -- --deny clippy::pedantic` is still working

[dev-dependencies]
ntest = "0.9.0"
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false
